@@ -341,7 +341,7 @@ class Image(plotters.GenericPlotter):
         if ( None in axes or
              axes[0].settings.direction != 'horizontal' or
              axes[1].settings.direction != 'vertical' or
-             not s.data in d.data ):
+             s.data not in d.data ):
             return
 
         # return if the dataset isn't two dimensional
