@@ -1,3 +1,7 @@
+* 2005-10-27 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Basic contour plotting added (requires veusz_helpers package
+	at the moment)
+	
 * 2005-10-23 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Some work towards contour plotting
 	
